sorry kainx  :)

-------------------------------------------------------------------------------

Sat Oct  2 18:59:21 PDT 1999
(Raster)

needed to fix the iclass ipc stuff a bit to make it more useful in the long
run

-------------------------------------------------------------------------------

Sat Oct  2 20:45:20 PDT 1999
(Raster)

chaneg menu entry name, fix some bits of the ipcs and remove useless \n's in
ipc returns...

-------------------------------------------------------------------------------

Sat Oct  2 21:20:50 PDT 1999
(Raster)

add $EBIN as env variable.. need for scripts.. :)

-------------------------------------------------------------------------------

Sun Oct  3 00:45:11 PDT 1999
(Raster)

get textclas ipc right....

-------------------------------------------------------------------------------

Sun Oct  3 01:11:42 PDT 1999
(Raster)

and save snapsh when the ipc is called....

-------------------------------------------------------------------------------

Sun Oct  3 11:44:39 PDT 1999
(Mandrake)

if the focus changes, we crush any open but un-stuck windows to avoid any
bizarre problems this may cause later

-------------------------------------------------------------------------------

Sun Oct  3 11:45:28 PDT 1999
(Raster)

change menu scroll dist to 4 pixels

-------------------------------------------------------------------------------

Sun Oct  3 12:03:22 PDT 1999
(Raster)

bad theme dialog added so people knwo they chose a bad theme...

-------------------------------------------------------------------------------

Sun Oct  3 12:37:15 PDT 1999
(Mandrake)

okay, here's the way the menu focus fix SHOUDL have gone

incidentally, we now have a proper README, INSTALL, and FAQ file in the e/
directory

-------------------------------------------------------------------------------

Sun Oct  3 13:09:10 PDT 1999
(Raster)

add soem smarts to icon imges to limit the size to the iconox size... :)